--- a/mysite/templates/pagos/saldo_consulta.html
+++ b/mysite/templates/pagos/saldo_consulta.html
@@ -115,7 +115,7 @@
                     { data: 'fecha_pago' },
                     { data: 'cantidad' },
                 ],
-                order: [[1, 'asc'], [2, 'asc']],
+                order: [[2, 'asc'], [1, 'asc']],
                 rowGroup: {
                     dataSrc: [ 'desc_est', 'tipo_pago' ],
                     endRender: ( rows, group, index ) => {
@@ -141,10 +141,10 @@
                         .reduce((a, b) => {
                             return a + ((b.tipo_pago === 'Vencido (Pagar lo antes posible)') ? b.cantidad : 0)
                         }, 0)
-                        let totalSaldo = totalPorVencer + totalVencido
-                        let diferenecia = Math.abs(totalPorVencer+totalVencido-totalPagado)
+                        let totalSaldo = totalPorVencer + totalVencido + totalPagado
+                        let diferenecia = Math.abs(totalSaldo-totalPagado)
                         return $('<tr/>')
-                        .append( `${index%2===0 ?  '<td colspan="1" class="tot"> Saldo Total: ' + numberFormat.format(totalSaldo) + '</td><td colspan="1" class="tot">Total Pagado: '+ numberFormat.format(totalPagado) + '</td>' + '<td colspan="1" class="tot">Diferencia Total: '+ numberFormat.format(diferenecia) + '</td>' : '<td colspan="2" class="sub" style="padding-left: 1.5em;"> SubTotal: </td> <td>' + numberFormat.format(totalPago) + '</td>'}` )
+                        .append( `${index%2===0 ?  '<td colspan="1" class="tot" style="background-color: rgb(116, 186, 255);"> Saldo Total: ' + numberFormat.format(totalSaldo) + '</td><td colspan="1" class="tot" style="background-color: rgb(116, 186, 255);">Total Pagado: '+ numberFormat.format(totalPagado) + '</td>' + '<td colspan="1" class="tot" style="background-color: rgb(116, 186, 255);">Diferencia Total: '+ numberFormat.format(diferenecia) + '</td>' : '<td colspan="2" class="sub" style="padding-left: 1.5em; background-color: rgb(106, 168, 230);"> SubTotal: </td> <td style="background-color: rgb(106, 168, 230);">' + numberFormat.format(totalPago) + '</td>'}` )
                         //.append( `<td colspan="2" class=${index%2===0 ? "tot" : "sub"}>${index%2===0 ?  'Saldo Total:' /*+ totalSaldo*/ : 'Saldo SubTotal:'}</td>` )
                         //.append( `<td>${totalPago}</td>` )
 
